# Bible

./: .gitignore  3rdpartylicenses.txt  404.html  559.16a7899f40193bf9.js  Cargo.toml  README.md  angular.json  eac24e57fd32f4b7.module.wasm  index.html  ngsw.json  package-lock.json  package.json  runtime.9639aeca6f68923d.js
.angular/cache/angular-webpack/535bd9a5b701ac1e4b9ed747c35bf41fe0751f22/: 0.pack  12.pack  14.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
pkg/: README.md  package.json  wasm_test_bg.js  wasm_test_bg.wasm
src/: index.html  lib.rs  sitemap.xml  styles.scss
src/app/: app-routing.module.ts  app.component.ts  app.module.ts  bible.service.ts  history.service.ts
src/app/about/: about.component.html  about.component.scss  about.component.ts
src/app/chapter-numbers/: chapter-numbers.component.html  chapter-numbers.component.scss  chapter-numbers.component.ts
src/app/display-book/: display-book.component.html  display-book.component.scss  display-book.component.ts
src/app/menu/: menu.component.html  menu.component.scss  menu.component.ts
src/app/not-found/: not-found.component.html  not-found.component.scss  not-found.component.ts
src/app/search/: search.component.html  search.component.scss  search.component.ts
src/app/testaments/: testaments.component.html  testaments.component.ts
src/app/the-bible/: the-bible.component.html  the-bible.component.scss  the-bible.component.ts
src/app/widget/: widget.component.ts
(+16 files in other folders)
