[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3


[profile.dev]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.63"
serde = "1.0"
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
log = "0.4"
console_log = "0.2"
regex = "1.5"

